# ros2-rmdx8

./: CMakeLists.txt  README.md  package.xml
launch/: experiment.launch.py
msg/: Control.msg  DesiredTrajectory.msg  State.msg  Time.msg
src/: commander.cpp  controller.cpp  reader.cpp  time_publisher.cpp  trajectory_generator.cpp  writer.cpp
